--- a/Explore.Linq.EFCore/Explore.Linq.EFCore.csproj
+++ b/Explore.Linq.EFCore/Explore.Linq.EFCore.csproj
@@ -6,6 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Scaffolding\PredicateBuilder.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Enumerable.pdf" />
+    <None Remove="Queryable.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="1.1.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
